@@ -7,6 +7,8 @@ sha1deep \- Compute and compare SHA-1 message digests
 .br
 sha256deep \- Compute and compare SHA-256 message digests
 .br
+sha3deep \- Compute and compare SHA-3-256 message digests
+.br
 tigerdeep \- Compute and compare Tiger message digests
 .br
 whirlpooldeep \- Compute and compare Whirlpool message digests
@@ -360,6 +362,10 @@ http://www.faqs.org/rfcs/rfc3174.html
 The SHA-256 specification, FIPS 180-2, is available at
 .br
 http://csrc.nist.gov/publications/fips/fips180-2/fips180-2.pdf
+.PP
+The SHA-3-256 specification is available at
+.br
+http://keccak.noekeon.org/
 .PP
 The Tiger specification is available at
 .br
